# Blackhole

./: README.md
blackhole/: API.md  DEPLOYMENT.md  PROJECT_OVERVIEW.md  QUICK_REFERENCE.md  README.md  docker-compose.yml  start.sh  test.sh
blackhole/backend/: Cargo.toml  Dockerfile
blackhole/backend/migrations/: 001_init.sql
blackhole/backend/src/: api.rs  db.rs  main.rs  models.rs  realtime.rs  rules.rs  smtp.rs
blackhole/frontend/: Dockerfile  index.html  package.json  tailwind.config.js
blackhole/frontend/src/: App.tsx  api.ts  index.css  types.ts
blackhole/frontend/src/components/: ComposeEmailModal.tsx
blackhole/frontend/src/pages/: ApiPage.tsx  DashboardPage.tsx  EmailDetailPage.tsx  InboxPage.tsx  LoginPage.tsx  RulesPage.tsx  SettingsPage.tsx
blackhole/frontend/src/stores/: authStore.ts
