[package]
name = "blackhole-mail"
version = "1.0.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart", "ws"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# SMTP
mailin = "0.6"
mail-parser = "0.9"
lettre = { version = "0.11", features = ["tokio1-native-tls", "smtp-transport", "builder"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"

# Auth & Security
jsonwebtoken = "9.2"
bcrypt = "0.15"
argon2 = "0.5"

# HTTP client (for webhooks & Resend)
reqwest = { version = "0.11", features = ["json"] }

# Configuration
dotenv = "0.15"

# Async channels
async-channel = "2.1"
futures = "0.3"

# HTML parsing for email
scraper = "0.18"

# Rate limiting
governor = "0.6"

[dev-dependencies]
mockall = "0.12"
